[main-private] minor changes